# claude-session-manager

./: .gitignore  LICENSE  README.md  pyproject.toml  token-burn-dashboard.html
.autoresearch/: autoresearch.config.md  autoresearch.jsonl  autoresearch.md
.autoresearch/researchers/: agent-a.md  agent-b.md  agent-c.md
.github/workflows/: test.yml
daemon/: go.mod  main.go
daemon/internal/classifier/: classifier.go  classifier_test.go
daemon/internal/ctlserver/: handler.go  handler_test.go  server.go
daemon/internal/ghostty/: ghostty.go
daemon/internal/hookserver/: handler.go  handler_test.go  hookserver_extra_test.go  httpserver.go  server.go
daemon/internal/model/: approval.go  session.go
daemon/internal/notify/: notify.go  (+1 more)
docs/: ghostty-plugin-research.md
ghostty/: csm-status.glsl
plugin/: plugin.json
plugin/hooks/: csm-hook.sh  hooks.json
scripts/: token-burn.py
src/csm/: __main__.py  app.py  autopilot.py  ghostty.py  models.py  notifications.py  parser.py  scanner.py  watcher.py
tests/: test_autopilot.py  test_notifications.py  test_parser.py  test_scanner.py  test_watcher.py
tests/fixtures/: running_tool_pending.jsonl  sample_session.jsonl  waiting_after_text.jsonl
tui/: go.mod  main.go
tui/go/: go.mod  main.go
tui/python/: pyproject.toml
tui/python/src/csm/: __init__.py  __main__.py  app.py  client.py  models.py
tui/python/src/csm/css/: app.tcss
tui/python/src/csm/widgets/: activity_log.py  approval_queue.py  session_pill.py  session_strip.py  zoom_panel.py
tui/ts/: package-lock.json  package.json  tsconfig.json
(+50 files in other folders)
