[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-session-manager"
version = "0.1.0"
description = "TUI for monitoring and managing Claude Code sessions"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.80",
    "psutil",
]

[project.scripts]
csm = "csm.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/csm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
