[project]
name = "csm-tui"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = ["textual>=0.80"]
# No psutil needed — daemon handles process scanning

[project.scripts]
csm = "csm.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csm"]
